tests/error/ref/set_not_ref.mml
let not_ref = 3 in
not_ref := 2
